# BT_DECinPhysics

./: CMakeLists.txt  Convergence.ipynb  ErrorAnalization.ipynb  PoissonAsym.ipynb  PoissonCube.ipynb  PoissonGauss.ipynb  PoissonHarm.ipynb  PoissonLine.ipynb  PoissonPlot.ipynb  code.txt  main.cpp  plot.ipynb
headers/: headers.h
headers/GeoFunc/: Circumcenter.h  Signum.cpp  Signum.h
headers/Meshing/: BoundaryElements.cpp  BoundaryElements.h  EdgesGen.cpp  EdgesGen.h  MeshGen.cpp  MeshGen.h  ReadingMesh.h  TriangulationFunc.cpp  TriangulationFunc.h
headers/NumCalc/: Integrators.cpp  Integrators.h  sparse.cpp  sparse.h  sparseMM.cpp  sparseMM.h  sparseMMT.cpp  sparseMMT.h
headers/OpConstruct/: BoundConstruct.cpp  BoundConstruct.h  DiagonalHodge.cpp  DiagonalHodge.h  ReadWriteOp.cpp  ReadWriteOp.h
headers/own/: Circumcenter.cpp  Circumcenter.h  DecCalc.cpp  DiagonalHodge.cpp  DiagonalHodge.h  MeshGen.cpp  MeshGen.h  ReadingMesh.cpp  ReadingMesh.h  Signum.cpp  Signum.h  TriangulationFunc.h  headers.h  sparse.h  sparseMM.cpp  sparseMM.h  sparseMMT.cpp  sparseMMT.h
headers/own/discretization/: Integrators.cpp  Integrators.h
